api-gateway/templates/api-gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: prod
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels: { app: api-gateway }
  template:
    metadata:
      labels: { app: api-gateway }
    spec:
      containers:
        - name: api-gateway
          image: nohyunha95/api-gateway:0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8765
          readinessProbe:
            httpGet: { path: /actuator/health/readiness, port: 8765 }
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet: { path: /actuator/health/liveness, port: 8765 }
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: prod
spec:
  type: LoadBalancer
  selector: { app: api-gateway }
  ports:
    - name: http
      port: 80
      targetPort: 8765
